Design Fixes Removed word-break in all TD Products

--- a/assets/css/table-style.css
+++ b/assets/css/table-style.css
@@ -127,7 +127,6 @@
 }
 .tdproduct{
 	width: 240px;
-	word-break: break-all;
 }
 .tddate{
 	width: 122px;
